Fix sonar issues
Add TODOs to reduce the cyclomatic complexity of some algorithms